@@ -1,0 +1,4 @@
+library(testthat)
+library(dst)
+
+test_check("dst")
